<resources>
    <string name="app_name">Tottenham Hotspur F.C.</string>
    <string name="bottom_nav_news">News</string>
    <string name="bottom_nav_team">Team</string>
    <string name="bottom_nav_season">Season</string>
    <string name="bottom_nav_matches">Matches</string>
    <string name="bottom_nav_media">Media</string>
    <string name="saved_news_hint">Swipe left or right to delete</string>
    <string name="error_no_internet_connection">No internet connection</string>
    <string name="success_article_save">Saved to bookmarks</string>
    <string name="success_article_delete">Article deleted</string>
    <string name="operation_undo">UNDO</string>
    <string name="share_button_title">Share</string>
    <string name="save_button_title">Save</string>

    <string name="fragment_article_title">Article</string>

    <string name="player_stats_general_title">GENERAL</string>
    <string name="player_stats_goalkeeping_title">GOALKEEPING</string>
    <string name="player_stats_distribution_title">DISTRIBUTION</string>
    <string name="player_stats_defense_title">DEFENSE</string>
    <string name="player_stats_attack_title">ATTACK</string>
    <string name="player_stats_discipline_title">DISCIPLINE</string>
    <string name="fragment_player_title">Player statistics</string>
    <string name="fragment_player_position_title">Position</string>
    <string name="fragment_player_born_title">Born</string>
    <string name="fragment_player_age_title">Age</string>
    <string name="fragment_player_height_title">Height</string>
    <string name="fragment_player_weight_title">Weight</string>
    <string name="fragment_player_stats_title">Premiere League Season Stats</string>
    <string name="fragment_player_player_photo_description">Player photo</string>
    <string name="fragment_player_team_logo_description">Team logo</string>
    <string name="fragment_player_games_title">Games</string>
    <string name="fragment_player_minutes_title">Minutes</string>
    <string name="fragment_player_rating_title">Rating</string>
    <string name="fragment_player_saves_title">Saves</string>
    <string name="fragment_player_conceded_goals_title">Conceded\ngoals</string>
    <string name="fragment_player_penalties_saved_title">Penalties\nsaved</string>
    <string name="fragment_player_total_passes_title">Total\npasses</string>
    <string name="fragment_player_key_passes_title">Key\npasses</string>
    <string name="fragment_player_successful_dribbles_title">Successful\ndribbles</string>
    <string name="fragment_player_tackles_title">Tackles</string>
    <string name="fragment_player_blocks_title">Blocks</string>
    <string name="fragment_player_interceptions_title">Interceptions</string>
    <string name="fragment_player_duels_won_title">Duels won</string>
    <string name="fragment_player_goals_title">Goals</string>
    <string name="fragment_player_assists_title">Assists</string>
    <string name="fragment_player_shots_title">Shots</string>
    <string name="fragment_player_on_target_title">On target</string>
    <string name="fragment_player_yellow_cards_title">Yellow cards</string>
    <string name="fragment_player_red_cards_title">Red cards</string>
    <string name="fragment_player_player_stats_drag_image_description">Player stats drag image</string>

    <string name="item_player_see_more">See more</string>
    <string name="item_player_photo_description">Player item photo</string>
    <string name="item_player_arrow_description">Player item arrow</string>

    <string name="fragment_team_header_image">Fragment team header image</string>

    <string name="fragment_season_league_table_tab">Table</string>
    <string name="fragment_season_top_goals_tab">Goals</string>
    <string name="fragment_season_top_assists_tab">Assists</string>

    <string name="fragment_news_latest_tab">Latest news</string>
    <string name="fragment_news_saved_tab">Bookmarks</string>

    <string name="fragment_matches_fixtures_tab">Fixtures</string>
    <string name="fragment_matches_results_tab">Results</string>

    <string name="fragment_fixture_info_events_tab">Events</string>
    <string name="fragment_fixture_info_stats_tab">Stats</string>
    <string name="fragment_fixture_info_lineups_tab">Line-up</string>
    <string name="fragment_fixture_info_title">Match details</string>
    <string name="fragment_fixture_info_referee_title">Referee:</string>

    <string name="item_standing_team_logo_description">Team logo</string>
    <string name="item_standing_number_title">№</string>
    <string name="item_standing_team_name_title">Club</string>
    <string name="item_standing_played_title">P</string>
    <string name="item_standing_won_title">W</string>
    <string name="item_standing_draw_title">D</string>
    <string name="item_standing_lost_title">L</string>
    <string name="item_standing_goals_dif_title">GD</string>
    <string name="item_standing_points_title">Pts</string>

    <string name="item_topscorer_player_photo_description">Player photo</string>
    <string name="item_topscorer_rank_title">№</string>
    <string name="item_topscorer_player_title">Player</string>
    <string name="item_topscorer_club_title">Club</string>
    <string name="item_topscorer_goals_title">Goals</string>
    <string name="item_topscorer_penalties_title">Pen.</string>

    <string name="item_topassistant_player_photo_description">Player photo</string>
    <string name="item_topassistant_rank_title">№</string>
    <string name="item_topassistant_player_title">Player</string>
    <string name="item_topassistant_club_title">Club</string>
    <string name="item_topassistant_assists_title">Assists</string>

    <string name="item_fixture_score_divider">-</string>
    <string name="item_fixture_league_logo_description">League logo</string>
    <string name="item_fixture_team_logo_description">Team logo</string>

    <string name="fragment_stats_no_content_message">Statistics are not available yet.\nCheck back later!</string>
    <string name="fragment_stats_total_shots_title">Total Shots</string>
    <string name="fragment_stats_shots_on_goal_title">Shots on Goal</string>
    <string name="fragment_stats_shots_off_goal_title">Shots off Goal</string>
    <string name="fragment_stats_shots_insidebox_title">Shots insidebox</string>
    <string name="fragment_stats_shots_outsidebox_title">Shots outsidebox</string>
    <string name="fragment_stats_blocked_shots_title">Blocked Shots</string>
    <string name="fragment_stats_corner_kicks_title">Corner Kicks</string>
    <string name="fragment_stats_offsides_title">Offsides</string>
    <string name="fragment_stats_goalkeeper_saves_title">Goalkeeper Saves</string>
    <string name="fragment_stats_ball_possession_title">Ball Possession</string>
    <string name="fragment_stats_fouls_title">Fouls</string>
    <string name="fragment_stats_yellow_cards_title">Yellow Cards</string>
    <string name="fragment_stats_red_cards_title">Red Cards</string>
    <string name="fragment_stats_total_passes_title">Total passes</string>
    <string name="fragment_stats_passes_accurate_title">Passes accurate</string>
    <string name="fragment_stats_passes_title">Passes %</string>

    <string name="fragment_lineups_formation_title">Formation</string>
    <string name="fragment_lineups_coach_title">Coach</string>
    <string name="fragment_lineups_starting_xi_title">Starting XI</string>
    <string name="fragment_lineups_substitutes_title">Substitutes</string>
    <string name="fragment_lineups_no_content_message">Line-ups are not available yet.\nCheck back later!</string>

    <string name="fragment_events_time_elapsed">%d\'</string>
    <string name="fragment_events_time_elapsed_plus_extra">%d + %d\'</string>
    <string name="fragment_events_no_content_message">Events are not available yet.\nCheck back later!</string>

    <string name="item_event_image_description">Event image</string>
    <string name="item_event_assist_title">Assist:</string>

    <string name="notifications_fixtures_title">The match starts!</string>
    <string name="notifications_fixtures_message">%s - %s at %s.</string>
    <string name="notifications_intent_type">%d-%s-%s</string>
</resources>