<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/newsFragment"
        android:icon="@drawable/ic_news"
        android:title="@string/bottom_nav_news" />

    <item
        android:id="@+id/matchesFragment"
        android:icon="@drawable/ic_matches"
        android:title="@string/bottom_nav_matches" />

    <item
        android:id="@+id/mediaFragment"
        android:icon="@drawable/ic_media"
        android:title="@string/bottom_nav_media" />

    <item
        android:id="@+id/seasonFragment"
        android:icon="@drawable/ic_season"
        android:title="@string/bottom_nav_season" />

    <item
        android:id="@+id/teamFragment"
        android:icon="@drawable/ic_team"
        android:title="@string/bottom_nav_team" />

</menu>