<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="by.aderman.tottenhamhotspurfc.presentation.viewmodels.season.SeasonViewModel" />

        <import
            alias="view"
            type="android.view.View" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/fragment_table_padding"
        tools:context=".presentation.ui.fragments.season.GoalsFragment">

        <LinearLayout
            android:id="@+id/column_titles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/rank_title"
                style="@style/SeasonTablesStyle"
                android:layout_width="0dp"
                android:layout_height="@dimen/item_standing_height"
                android:layout_weight="1"
                android:text="@string/item_topscorer_rank_title" />

            <TextView
                android:id="@+id/name"
                style="@style/SeasonTablesStyle"
                android:layout_width="0dp"
                android:layout_height="@dimen/item_standing_height"
                android:layout_weight="6"
                android:text="@string/item_topscorer_player_title" />

            <TextView
                android:id="@+id/team"
                style="@style/SeasonTablesStyle"
                android:layout_width="0dp"
                android:layout_height="@dimen/item_standing_height"
                android:layout_weight="5"
                android:text="@string/item_topscorer_club_title" />

            <TextView
                android:id="@+id/goals"
                style="@style/SeasonTablesStyle"
                android:layout_width="0dp"
                android:layout_height="@dimen/item_standing_height"
                android:layout_weight="2"
                android:text="@string/item_topscorer_goals_title"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/column_titles">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.responseReceivedLiveData? view.GONE : view.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>