<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="player"
            type="by.aderman.tottenhamhotspurfc.domain.models.team.Player" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/th_background"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/player_photo"
                    android:layout_width="@dimen/item_player_photo_width"
                    android:layout_height="@dimen/item_player_photo_height"
                    android:contentDescription="@string/item_player_photo_description"
                    android:scaleType="centerCrop"
                    app:image="@{player.photo}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/player_name"
                    style="@style/ItemPlayerNameTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/item_player_margin"
                    android:layout_marginTop="@dimen/item_player_margin"
                    android:text="@{player.name}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/player_photo"
                    tools:text="Hugo Lloris" />

                <TextView
                    android:id="@+id/player_position"
                    style="@style/ItemPlayerTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/item_player_margin"
                    android:text="@{player.position}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/player_name"
                    tools:text="Goalkeeper" />

                <ImageView
                    android:id="@+id/player_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/item_player_margin"
                    android:layout_marginBottom="@dimen/item_player_margin"
                    android:contentDescription="@string/item_player_arrow_description"
                    android:src="@drawable/ic_arrow_circle_right"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/player_arrow_title"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/player_number" />

                <TextView
                    android:id="@+id/player_arrow_title"
                    style="@style/ItemPlayerSeeMoreTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/item_player_see_more_margin_start"
                    android:text="@string/item_player_see_more"
                    app:layout_constraintBottom_toBottomOf="@id/player_arrow"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/player_arrow"
                    app:layout_constraintTop_toTopOf="@id/player_arrow" />

                <TextView
                    android:id="@+id/player_number"
                    style="@style/ItemPlayerNumberTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/item_player_number_margin_end"
                    android:text="@{Integer.toString(player.number)}"
                    android:textAlignment="viewEnd"
                    app:layout_constraintBottom_toBottomOf="@id/player_position"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/player_name"
                    tools:text="44" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>